一覧取得APIのHTTPメソッドをGETに変更
