# swagger/openapi.json
@@ -1526,206 +1526,6 @@
         "tags": [
           "Comment"
         ],
-        "description": "コメントを取得する。",
-        "parameters": [
-          {
-            "description": "取得するデータの指定",
-            "in": "query",
-            "name": "cursor",
-            "required": false,
-            "schema": {
-              "type": "string",
-              "example": "eyJjb21tZW50cy5pZCI6MTUsIl9wb2ludHNUb05leHRJdGVtcyI6dHJ1ZX0"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "post_id": {
-                    "type": "integer",
-                    "example": 1,
-                    "description": "投稿のID"
-                  },
-                  "order_by": {
-                    "type": "string",
-                    "example": "created_by",
-                    "description": "並び順のキー"
-                  },
-                  "order": {
-                    "type": "string",
-                    "example": "asc",
-                    "description": "昇順・降順の指定"
-                  }
-                },
-                "required": [
-                  "post_id"
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "成功",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "total": {
-                      "type": "integer",
-                      "example": 50
-                    },
-                    "next_cursor": {
-                      "type": "string",
-                      "example": "eyJjb21tZW50cy5pZCI6MTUsIl9wb2ludHNUb05leHRJdGVtcyI6dHJ1ZX0"
-                    },
-                    "prev_cursor": {
-                      "type": "string",
-                      "example": null
-                    },
-                    "data": {
-                      "type": "array",
-                      "example": [
-                        {
-                          "id": 1,
-                          "post_id": 1,
-                          "user_id": 1,
-                          "text": "テスト",
-                          "created_by": "山田一郎",
-                          "created_at": "2022-01-01 00:00:00"
-                        },
-                        {
-                          "id": 2,
-                          "post_id": 1,
-                          "user_id": 1,
-                          "text": "テスト",
-                          "created_by": "山田一郎",
-                          "created_at": "2022-01-02 00:00:00"
-                        },
-                        {
-                          "id": 3,
-                          "post_id": 1,
-                          "user_id": 1,
-                          "text": "テスト",
-                          "created_by": "山田一郎",
-                          "created_at": "2022-01-03 00:00:00"
-                        },
-                        {
-                          "id": 4,
-                          "post_id": 1,
-                          "user_id": 1,
-                          "text": "テスト",
-                          "created_by": "山田一郎",
-                          "created_at": "2022-01-04 00:00:00"
-                        },
-                        {
-                          "id": 5,
-                          "post_id": 1,
-                          "user_id": 1,
-                          "text": "テスト",
-                          "created_by": "山田一郎",
-                          "created_at": "2022-01-05 00:00:00"
-                        },
-                        {
-                          "id": 6,
-                          "post_id": 1,
-                          "user_id": 2,
-                          "text": "テスト",
-                          "created_by": "田中二郎",
-                          "created_at": "2022-01-06 00:00:00"
-                        },
-                        {
-                          "id": 7,
-                          "post_id": 1,
-                          "user_id": 2,
-                          "text": "テスト",
-                          "created_by": "田中二郎",
-                          "created_at": "2022-01-07 00:00:00"
-                        },
-                        {
-                          "id": 8,
-                          "post_id": 1,
-                          "user_id": 2,
-                          "text": "テスト",
-                          "created_by": "田中二郎",
-                          "created_at": "2022-01-08 00:00:00"
-                        },
-                        {
-                          "id": 9,
-                          "post_id": 1,
-                          "user_id": 2,
-                          "text": "テスト",
-                          "created_by": "田中二郎",
-                          "created_at": "2022-01-09 00:00:00"
-                        },
-                        {
-                          "id": 10,
-                          "post_id": 1,
-                          "user_id": 2,
-                          "text": "テスト",
-                          "created_by": "田中二郎",
-                          "created_at": "2022-01-10 00:00:00"
-                        },
-                        {
-                          "id": 11,
-                          "post_id": 1,
-                          "user_id": 3,
-                          "text": "テスト",
-                          "created_by": "中田三郎",
-                          "created_at": "2022-01-11 00:00:00"
-                        },
-                        {
-                          "id": 12,
-                          "post_id": 1,
-                          "user_id": 3,
-                          "text": "テスト",
-                          "created_by": "中田三郎",
-                          "created_at": "2022-01-12 00:00:00"
-                        },
-                        {
-                          "id": 13,
-                          "post_id": 1,
-                          "user_id": 3,
-                          "text": "テスト",
-                          "created_by": "中田三郎",
-                          "created_at": "2022-01-13 00:00:00"
-                        },
-                        {
-                          "id": 14,
-                          "post_id": 1,
-                          "user_id": 3,
-                          "text": "テスト",
-                          "created_by": "中田三郎",
-                          "created_at": "2022-01-14 00:00:00"
-                        },
-                        {
-                          "id": 15,
-                          "post_id": 1,
-                          "user_id": 3,
-                          "text": "テスト",
-                          "created_by": "中田三郎",
-                          "created_at": "2022-01-15 00:00:00"
-                        }
-                      ]
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/comments/store": {
-      "post": {
-        "tags": [
-          "Comment"
-        ],
         "description": "コメントを作成する。",
         "requestBody": {
           "content": {
